# mybilibili-obs-plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_en.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/scripts/: build-ubuntu  package-ubuntu
.github/workflows/: build-project.yaml  build.yml  push.yaml
cmake/common/: buildspec_common.cmake
cmake/windows/: buildspec.cmake
data/: config.json
data/locale/: en-US.ini
src/: bilibili_api.cpp  bilibili_api.hpp  http_client.cpp  http_client.hpp  md5.cpp  md5.hpp  mybili_api.cpp  mybili_api.hpp  plugin-main.cpp  plugin_utils.cpp  plugin_utils.hpp
src/core/: config_manager.cpp  config_manager.hpp  qr_generator.cpp  qr_generator.hpp
src/json11/: json11.cpp  json11.hpp
src/qrcodegen/: qrcodegen.cpp  qrcodegen.hpp
src/ui/: dialog_factory.cpp  dialog_factory.hpp  menu_manager.cpp  menu_manager.hpp
